--- a/EmployeeManagement/_Imports.razor
+++ b/EmployeeManagement/_Imports.razor
@@ -8,3 +8,8 @@
 @using Microsoft.JSInterop
 @using EmployeeManagement
 @using EmployeeManagement.Shared
+@using EmployeeManagement.Services
+@using MudBlazor
+@inject EmployeeService employeeService
+@inject DepartmentService departmentService
+
