--- a/EmployeeManagement/Shared/MainLayout.razor
+++ b/EmployeeManagement/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>EmployeeManagement</PageTitle>
+<PageTitle>Employee Management</PageTitle>
 
 <div class="page">
     <div class="sidebar">
@@ -9,11 +9,14 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href="https://guavasoft.org/about" target="_blank">About</a>
         </div>
 
         <article class="content px-4">
             @Body
         </article>
+        <MudThemeProvider />
+        <MudDialogProvider />
+        <MudSnackbarProvider />
     </main>
 </div>
