--- a/EmployeeManagement/Shared/NavMenu.razor
+++ b/EmployeeManagement/Shared/NavMenu.razor
@@ -15,13 +15,13 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="departments">
+                <span class="oi oi-plus" aria-hidden="true"></span> Departments
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="employees">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Employees
             </NavLink>
         </div>
     </nav>
